[gd_scene load_steps=19 format=3 uid="uid://cv0wq7sh7y78t"]

[ext_resource type="Texture2D" uid="uid://2b6endpvk5n3" path="res://sprites/gui/2 Bars/HealthBar8.png" id="1_6uhx6"]
[ext_resource type="FontFile" uid="uid://ck1trnbjuouv1" path="res://sprites/gui/10 Font/CyberpunkCraftpixPixel.otf" id="1_d02be"]
[ext_resource type="Texture2D" uid="uid://dq67n6s2vl1s0" path="res://sprites/gui/2 Bars/HealthBar4.png" id="1_qwj12"]
[ext_resource type="Script" path="res://scripts/Control.gd" id="1_tbv50"]
[ext_resource type="Texture2D" uid="uid://cy372t1ecbgjy" path="res://sprites/2 Background/Night/1.png" id="1_yavbt"]
[ext_resource type="Texture2D" uid="uid://nh7a150d4xiu" path="res://sprites/2 Background/Night/2.png" id="2_arbht"]
[ext_resource type="Texture2D" uid="uid://dkfwfo3ruehj" path="res://sprites/2 Background/Night/3.png" id="3_ncoc7"]
[ext_resource type="Texture2D" uid="uid://b1tvkuma7lyti" path="res://sprites/2 Background/Night/4.png" id="4_hj2ds"]
[ext_resource type="Texture2D" uid="uid://cupdftr5va5pe" path="res://sprites/gui/6 Buttons/1/1_04.png" id="4_nfwdp"]
[ext_resource type="Texture2D" uid="uid://cxhqss6vivetq" path="res://sprites/2 Background/Night/5.png" id="5_5x1nx"]
[ext_resource type="Texture2D" uid="uid://ps773wj7e3u1" path="res://sprites/gui/6 Buttons/1/1_08.png" id="5_hy87v"]

[sub_resource type="LabelSettings" id="LabelSettings_8eoib"]
font = ExtResource("1_d02be")
font_size = 18
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[sub_resource type="ImageTexture" id="ImageTexture_ma3g7"]

[sub_resource type="ImageTexture" id="ImageTexture_0fs0u"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ihqv7"]
texture = ExtResource("1_6uhx6")
texture_margin_left = 5.0
texture_margin_top = 5.0
texture_margin_right = 5.0
texture_margin_bottom = 5.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4fi86"]
texture = ExtResource("1_qwj12")
texture_margin_left = 5.0
texture_margin_top = 5.0
texture_margin_right = 5.0
texture_margin_bottom = 5.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_elqdd"]
texture = ExtResource("4_nfwdp")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xv8js"]
texture = ExtResource("5_hy87v")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0

[node name="Node2D" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.56, 0.56)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tbv50")

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 0
offset_left = -106.0
offset_top = -88.0
offset_right = 105.0
offset_bottom = -48.0
scale = Vector2(1, 1.24)

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Master Volume"
label_settings = SubResource("LabelSettings_8eoib")

[node name="HSlider" type="HSlider" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_icons/grabber = SubResource("ImageTexture_ma3g7")
theme_override_icons/grabber_highlight = SubResource("ImageTexture_0fs0u")
theme_override_styles/slider = SubResource("StyleBoxTexture_ihqv7")
theme_override_styles/grabber_area = SubResource("StyleBoxTexture_4fi86")
min_value = -30.0
max_value = 10.0
step = 5.0
rounded = true

[node name="Label2" type="Label" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Music Volume"
label_settings = SubResource("LabelSettings_8eoib")

[node name="HSlider2" type="HSlider" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_icons/grabber = SubResource("ImageTexture_ma3g7")
theme_override_icons/grabber_highlight = SubResource("ImageTexture_0fs0u")
theme_override_styles/slider = SubResource("StyleBoxTexture_ihqv7")
theme_override_styles/grabber_area = SubResource("StyleBoxTexture_4fi86")
min_value = -30.0
max_value = 10.0
step = 5.0
rounded = true

[node name="Label3" type="Label" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "SFX Volume"
label_settings = SubResource("LabelSettings_8eoib")

[node name="HSlider3" type="HSlider" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_icons/grabber = SubResource("ImageTexture_ma3g7")
theme_override_icons/grabber_highlight = SubResource("ImageTexture_0fs0u")
theme_override_styles/slider = SubResource("StyleBoxTexture_ihqv7")
theme_override_styles/grabber_area = SubResource("StyleBoxTexture_4fi86")
min_value = -30.0
max_value = 10.0
step = 5.0
rounded = true

[node name="Exit" type="Button" parent="Control"]
layout_mode = 0
offset_left = -26.0
offset_top = 106.0
offset_right = 29.0
offset_bottom = 132.0
theme_override_fonts/font = ExtResource("1_d02be")
theme_override_styles/normal = SubResource("StyleBoxTexture_elqdd")
theme_override_styles/hover = SubResource("StyleBoxTexture_elqdd")
theme_override_styles/pressed = SubResource("StyleBoxTexture_xv8js")
text = "Back"

[node name="Node2D" type="Node2D" parent="."]
z_index = -1

[node name="1" type="Sprite2D" parent="Node2D"]
texture = ExtResource("1_yavbt")

[node name="2" type="Sprite2D" parent="Node2D"]
texture = ExtResource("2_arbht")

[node name="3" type="Sprite2D" parent="Node2D"]
texture = ExtResource("3_ncoc7")

[node name="4" type="Sprite2D" parent="Node2D"]
texture = ExtResource("4_hj2ds")

[node name="5" type="Sprite2D" parent="Node2D"]
texture = ExtResource("5_5x1nx")

[connection signal="value_changed" from="Control/MarginContainer/VBoxContainer/HSlider" to="Control" method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="Control/MarginContainer/VBoxContainer/HSlider2" to="Control" method="_on_h_slider_2_value_changed"]
[connection signal="value_changed" from="Control/MarginContainer/VBoxContainer/HSlider3" to="Control" method="_on_h_slider_3_value_changed"]
[connection signal="pressed" from="Control/Exit" to="Control" method="_on_exit_pressed"]
